[package]
name = "myspeed"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.x86_64-unknown-linux-gnu]
linker = "x86_64-linux-gnu-gcc"
[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "socks"] }
bytes = "1.1"
serde = "1.0"
serde_json = "1.0"
futures-util = "0.3.28"
chrono = "0.4.31"



